--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-headroom": "^2.1.4",
     "react-helmet": "^3.2.2",
     "react-responsive-grid": "^0.3.3",
+    "react-slick": "^0.14.11",
     "react-typography": "^0.15.0",
+    "slick-carousel": "^1.6.0",
     "toml-js": "0.0.8",
     "typography": "^0.15.8",
     "typography-plugin-code": "^0.15.9"
