--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "markdown-it-sub": "^1.0.0",
     "normalize.css": "^7.0.0",
     "object-assign": "^4.1.1",
+    "raf": "^3.3.2",
     "react-headroom": "^2.1.4",
     "react-helmet": "^3.2.2",
     "react-responsive-grid": "^0.3.3",
@@ -39,6 +40,7 @@
   "scripts": {
     "build": "gatsby build",
     "deploy": "gatsby build --prefix-links && gh-pages -d public",
+    "deploy_man": "gatsby build && git subtree push --prefix public origin gh-pages",
     "develop": "gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
