--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-headroom": "^2.1.4",
     "react-helmet": "^3.2.2",
     "react-responsive-grid": "^0.3.3",
+    "react-scrollable-anchor": "^0.5.0",
     "react-slick": "^0.14.11",
     "react-typography": "^0.15.0",
     "slick-carousel": "^1.6.0",
