Making progress on mobile-last design

--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "serve": "gatsby serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "build:gh": "npm run clean && npm run build:pp && npm run publish:gh",
+    "publish:gh": "gh-pages -d public -r 'git@github.com:kitsuneanalytics/kitsuneanalytics.github.io.git' -b master",
     "deploy": "npm run build:gh",
     "clean": "rm -rf public",
     "lint:js": "eslint --ext .js,.jsx --ignore-pattern public,static .",
