--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gatsby-plugin-typography": "^1.7.6",
     "graphql": "^0.10.5",
     "history": "^4.6.3",
-    "jump.js": "^1.0.2",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "object-assign": "^4.1.1",
@@ -25,7 +24,7 @@
     "react-dom": "^15.6.1",
     "react-headroom": "^2.1.4",
     "react-helmet": "^3.2.2",
-    "react-scrollable-anchor": "^0.5.0",
+    "react-scroll": "^1.6.4",
     "react-slick": "^0.14.11",
     "react-typography": "^0.16.1",
     "slick-carousel": "^1.6.0",
