--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "kitsune-abalytics",
+  "name": "kitsune-analytics",
   "description": "Kitsune Analytics",
   "version": "1.0.0",
   "author": "Rex McConnell <rex@rexmac.com>",
   "private": true,
   "dependencies": {
-    "gatsby": "^1.8.13",
-    "gatsby-link": "^1.6.8",
-    "gatsby-plugin-google-analytics": "^1.0.4",
-    "gatsby-plugin-nprogress": "^1.0.3",
-    "gatsby-plugin-offline": "^1.0.4",
-    "gatsby-plugin-postcss-sass": "^1.0.3",
-    "gatsby-plugin-react-helmet": "^1.0.3",
-    "gatsby-plugin-typography": "^1.7.6",
-    "graphql": "^0.10.5",
-    "history": "^4.6.3",
+    "gatsby": "^1.9.119",
+    "gatsby-link": "^1.6.28",
+    "gatsby-plugin-google-analytics": "^1.0.12",
+    "gatsby-plugin-nprogress": "^1.0.7",
+    "gatsby-plugin-offline": "^1.0.10",
+    "gatsby-plugin-postcss-sass": "^1.0.13",
+    "gatsby-plugin-react-helmet": "^2.0.1",
+    "gatsby-plugin-typography": "^1.7.10",
+    "history": "^4.7.2",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "object-assign": "^4.1.1",
-    "prop-types": "^15.5.10",
-    "raf": "^3.3.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-headroom": "^2.1.4",
-    "react-helmet": "^3.2.2",
-    "react-scroll": "^1.6.4",
-    "react-slick": "^0.14.11",
-    "react-typography": "^0.16.1",
-    "slick-carousel": "^1.6.0",
-    "typography": "^0.16.0",
-    "typography-plugin-code": "^0.15.11"
+    "prop-types": "^15.6.0",
+    "raf": "^3.4.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.1.1",
+    "react-headroom": "^2.2.2",
+    "react-helmet": "^5.2.0",
+    "react-scroll": "^1.6.7",
+    "react-slick": "^0.15.4",
+    "react-typography": "^0.16.5",
+    "slick-carousel": "^1.8.1",
+    "typography": "^0.16.6",
+    "typography-plugin-code": "^0.16.11"
   },
   "devDependencies": {
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0",
-    "gh-pages": "^0.12.0",
-    "stylelint": "^8.0.0",
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb": "^16.0.0",
+    "eslint-config-prettier": "^2.8.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.0",
+    "eslint-plugin-react": "^7.5.1",
+    "gh-pages": "^1.1.0",
+    "stylelint": "^8.2.0",
     "stylelint-config-standard": "^17.0.0"
   },
   "keywords": [
@@ -62,5 +61,6 @@
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write"
-  }
+  },
+  "repository": "git@github.com:rexmac/kitsuneanalytics.git"
 }
