--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-offline": "^1.0.10",
     "gatsby-plugin-postcss-sass": "^1.0.13",
     "gatsby-plugin-react-helmet": "^2.0.1",
+    "gatsby-plugin-sitemap": "^1.2.9",
     "gatsby-plugin-typography": "^1.7.10",
     "graphql": "^0.11.7",
     "history": "^4.7.2",
